--- a/_posts/TS/2023-06-22-TStest.md
+++ b/_posts/TS/2023-06-22-TStest.md
@@ -9,21 +9,21 @@ defaults:
   comments: true
   related: true
 
-title: "Vue Test"
-excerpt: "Vue Test"
+title: "TS Test"
+excerpt: "TS Test"
 toc: true
 toc_sticky: true
 toc_label: "목차"
 categories:
-- Vue
+- TS
   tags:
-- [Vue]
-  date: 2021-04-14
-  last_modified_at: 2021-04-14
+- [TS]
+  date: 2023-06-22
+  last_modified_at: 2023-06-22
 ---
-# Vue Test
+# TS Test
 
-testing
+testingasdsfaf
 
 ```cpp
 ```
