--- a/_posts/Vue/2023-06-21-뷰테스트.md
+++ b/_posts/Vue/2023-06-21-뷰테스트.md
@@ -9,21 +9,21 @@ defaults:
   comments: true
   related: true
 
-title: "TS Test"
-excerpt: "TS Test"
+title: "Vue Test"
+excerpt: "Vue Test"
 toc: true
 toc_sticky: true
 toc_label: "목차"
 categories:
-- TS
+- Vue
   tags:
-- [TS]
-  date: 2021-04-14
-  last_modified_at: 2021-04-14
+- [Vue]
+  date: 2023-06-21
+  last_modified_at: 2023-06-21
 ---
-# TS Test
+# Vue Test
 
 testing
 
 ```cpp
-```
+```s
