--- a/_posts/TypeScript/2023-06-22-TStest.md
+++ b/_posts/TypeScript/2023-06-22-TStest.md
@@ -15,15 +15,12 @@ toc: true
 toc_sticky: true
 toc_label: "목차"
 categories:
-- TS
+- TypeScript
   tags:
-- [TS, JS]
+- [TypeScript, JS]
   date: 2023-06-22
   last_modified_at: 2023-06-22
 ---
-# TS Test
+# TypeScript Test
 
-testingasdsfaf
-
-```cpp
-```
+TypeScriptTypeScriptTypeScriptTypeScriptTypeScriptTypeScriptTypeScriptTypeScript
