--- a/_posts/JS/2021-04-14-JStest.md
+++ b/_posts/JS/2021-04-14-JStest.md
@@ -9,8 +9,8 @@ defaults:
       comments: true
       related: true
 
-title: "JS Test"
-excerpt: "JS Test"
+title: "JS Test ??"
+excerpt: "JS Test ??"
 toc: true
 toc_sticky: true
 toc_label: "목차"
