--- a/_posts/JS/2023-06-22-JStest.md
+++ b/_posts/JS/2023-06-22-JStest.md
@@ -9,8 +9,8 @@ defaults:
       comments: true
       related: true
 
-title: "JS Test ??"
-excerpt: "JS Test ??"
+title: "JS Test ??ㅂ"
+excerpt: "JS Test ??ㅂ"
 toc: true
 toc_sticky: true
 toc_label: "목차"
@@ -18,10 +18,10 @@ categories:
   - JS
 tags:
   - [JS]
-date: 2021-04-14
-last_modified_at: 2021-04-14
+date: 2023-06-22
+last_modified_at: 2023-06-22
 ---
-# JS Test 머임 
+# JS Test 머임 ㅂ
 
 testing
 
