--- a/_posts/Nginx/2023-06-22-nginx설정.md
+++ b/_posts/Nginx/2023-06-22-nginx설정.md
@@ -15,9 +15,9 @@ toc: true
 toc_sticky: true
 toc_label: "목차"
 categories:
-- nginx
+- Nginx
   tags:
-- [nginx]
+- [Nginx]
   date: 2023-06-22
   last_modified_at: 2023-06-22
 ---
