--- a/_posts/JS/2023-06-22-JStest.md
+++ b/_posts/JS/2023-06-22-JStest.md
@@ -9,8 +9,8 @@ defaults:
       comments: true
       related: true
 
-title: "JS Test ??ㅂ"
-excerpt: "JS Test ??ㅂ"
+title: "JS Test "
+excerpt: "JS Test "
 toc: true
 toc_sticky: true
 toc_label: "목차"
