--- a/_posts/TypeScript/2023-06-22-TStest.md
+++ b/_posts/TypeScript/2023-06-22-TStest.md
@@ -9,18 +9,21 @@ defaults:
   comments: true
   related: true
 
-title: "TS Test"
-excerpt: "TS Test"
+title: "JS Test 222"
+excerpt: "JS Test 222"
 toc: true
 toc_sticky: true
 toc_label: "목차"
 categories:
-- TypeScript
+- JS
   tags:
-- [TypeScript, JS]
+- [JS]
   date: 2023-06-22
   last_modified_at: 2023-06-22
 ---
-# TypeScript Test
+# JS Test 머임 ㅂ
 
-TypeScriptTypeScriptTypeScriptTypeScriptTypeScriptTypeScriptTypeScriptTypeScript
+testing
+
+```cpp
+```
