--- a/_posts/TypeScript/2023-06-22-TStest.md
+++ b/_posts/TypeScript/2023-06-22-TStest.md
@@ -9,21 +9,21 @@ defaults:
   comments: true
   related: true
 
-title: "JS Test 222"
-excerpt: "JS Test 222"
+title: "TypeScript Test 222"
+excerpt: "TypeScript Test 222"
 toc: true
 toc_sticky: true
 toc_label: "목차"
 categories:
-- JS
+- TypeScript
   tags:
-- [JS]
+- [TypeScript]
   date: 2023-06-22
   last_modified_at: 2023-06-22
 ---
-# JS Test 머임 ㅂ
+# TypeScript 
 
 testing
-
+# TypeScript zz
 ```cpp
 ```
