--- a/_posts/Nginx/2023-06-22-nginx설정.md
+++ b/_posts/Nginx/2023-06-22-nginx설정.md
@@ -1,27 +1,26 @@
 ---
 defaults:
-- scope:
-  path: ""
-  type: posts
+  - scope:
+      path: ""
+      type: posts
   values:
-  layout: single
-  author_profile: true
-  comments: true
-  related: true
+      layout: single
+      author_profile: true
+      comments: true
+      related: true
 
-title: "nginx 설정"
-excerpt: "nginx 설정"
+title: "Nginx Test"
+excerpt: "Nginx Test"
 toc: true
 toc_sticky: true
 toc_label: "목차"
 categories:
-- Nginx
-  tags:
-- [Nginx]
-  date: 2023-06-22
-  last_modified_at: 2023-06-22
+  - Nginx
+tags:
+  - [Nginx]
+date: 2023-06-21
+last_modified_at: 2023-06-21
 ---
-# nginx 설정 Test 머임 ㅂ
+# Nginx Test
 
 testing
-zzzzz
