--- a/_posts/Nginx/2023-06-25-nginx-1.md
+++ b/_posts/Nginx/2023-06-25-nginx-1.md
@@ -3,23 +3,23 @@ defaults:
   - scope:
       path: ""
       type: posts
-  values:
-    layout: single
-    author_profile: true
-    comments: true
-    related: true
+    values:
+      layout: single
+      author_profile: true
+      comments: true
+      related: true
 
-title: "Nginx-1"
-excerpt: "Nginx-1"
+title: "Nginx Test"
+excerpt: "Nginx Test"
 toc: true
 toc_sticky: true
 toc_label: "목차"
 categories:
-  - Nginx 
-tags:
-  - [Nginx]
-date: 2023-06-21
-last_modified_at: 2023-06-21
+- Nginx
+  tags:
+- [Nginx]
+  date: 2023-06-26
+  last_modified_at: 2023-06-26
 ---
 
 # Nginx(1)
