--- a/_posts/JS/2023-06-26-자바스크립트-특징-.md
+++ b/_posts/JS/2023-06-26-자바스크립트-특징-.md
@@ -54,7 +54,8 @@ last_modified_at: 2023-06-26
 - 함수의 실행, 호이스팅, 렉시컬 환경, 클로저 같은 개념들을 관통하는 하나의 큰 개념
 - 현재 실행중인 코드에 대한 세부 정보 (제어 흐름의 위치, 선언된 변수와 함수, this, arguments) 를 담고있는 데이터 구조
 - Global , Function  Execution Context 로 구성된다
-
+- 실행 컨텍스트의 생성은 먼저 렉시컬 환경이 생성되고 this 바인딩이 이루어진다. 
+- 
 &nbsp;
 
 &nbsp;
@@ -71,15 +72,6 @@ last_modified_at: 2023-06-26
 
 
 
-# 렉시컬 환경
-- 스크립트 전체, 코드블록, 호출된 함수는 렉시컬 환경이라는 이론상 객체를 가지고 있다.
-- 환경 레코드와 , 외부 렉시컬 환경으로 구성되어있다. 
-
-# 환경 레코드 Environment Record
-- 현재 실행중인 코드 환경의 this값과 선언된 모든 변수와 함수가 저장되는 곳
-
-# 외부 렉시컬 환경 Outer Lexical Environment 
-- 외부 렉시컬 환경의 참조값 (외부 변수에 접근가능)
 
 
 
