--- a/_posts/JS/2023-06-26-let과 const.md
+++ b/_posts/JS/2023-06-26-let과 const.md
@@ -49,8 +49,8 @@ let b = 20;
 a = 20;
 ```
 
-만약 내가 이러한 변수 a에 20을 재할당하게 된다면 어떤 작용이 일어나는가?
-변수 a의 메모리 값을 변경하는것이 아니라 기존에 20을 저장하고 있는 (즉 b가 가르키는 메모리의 주소값으로 변경한다)
+만약 내가 이러한 변수 a에 20을 재할당하게 된다면 어떤 작용이 일어나는가?    
+변수 a의 메모리 값을 변경하는것이 아니라 기존에 20을 저장하고 있는 (즉 b가 가르키는 메모리의 주소값으로 변경한다)   
 a에 저장된 주소 값은 곧 b의 메모리 주소값과 동일해진다는 것이다 . 
 
 
@@ -72,7 +72,8 @@ b = 30;
 
 
 # 참조 타입의 변수 선언과 할당 
-원시타입의 선언과 할당에도 마찬가지로 Call Stack이 사용된다 하지만 Call Stack의 값에는 메모리 주소가 들어가게되고  
+원시타입의 선언과 할당에도 마찬가지로 Call Stack이 사용된다   
+하지만 Call Stack의 값에는 메모리 주소가 들어가게되고    
 그 주소는 memory heap에서 찾을 수 있다. memory heap의 주소 안에는 값이 들어가게 된다   
 
 가볍게 설명하자면 원시타입은 메모리 주소를 찾으면 값이 원시타입이 나오고    
