--- a/_posts/JS/2023-06-26-렉시컬 환경.md
+++ b/_posts/JS/2023-06-26-렉시컬 환경.md
@@ -25,7 +25,7 @@ last_modified_at: 2023-06-26
 - 스크립트 전체, 코드블록, 호출된 함수는 렉시컬 환경이라는 이론상 객체를 가지고 있다.  
 - 환경 레코드와 , 외부 렉시컬 환경으로 구성되어있다.  
    
-- &nbsp;
+&nbsp;
 
 # 환경 레코드 Environment Record
 - 현재 실행중인 코드 환경의 this값과 선언된 모든 변수와 함수가 저장되는 곳  
@@ -51,7 +51,7 @@ function test() {
     console.log(`${msg} ${name1} ${name2}`)
 }
 ```
-이러한 코드가 있다하면 함수 test의 렉시컬 환경과 전체 스크립트의 렉시컬 환경이 있다.  
+이러한 코드가 있다하면 함수 test의 렉시컬 환경과, 스크립트의 전체의 렉시컬 환경이 있다.  
 &nbsp;  
 우선 전체스크립트의 렉시컬 환경을 보면   
 환경 렉시컬에 전체 스크립트가 모두 들어가있다고 생각하면되는데   
@@ -61,8 +61,9 @@ name1, name2, test:function
 &nbsp;    
 그리고 함수 test의 환경 레코드 안에는 msg 가 들어있고 외부 렉시컬 환경으로는 전체 스크립트를 가리키고 있다.  
 실행중인 함수는 가장 먼저 자신의 환경 레코드를 찾고 그곳에서 찾지 못하면 외부 렉시컬을 찾는다 ,   
-또 다시 외부렉시컬의 환경 렉시컬에 값이 없다면 외부렉시컬의 외부렉시컬로....    
-이렇게 해당 변수를 찾을때까지 반복하고 만약 변수를 찾지 못한다면 Reference에러가 발생한다.   
+또 다시 외부렉시컬의 환경 렉시컬에 값이 없다면 외부렉시컬의 외부렉시컬로....      
+&nbsp;
+이렇게 해당 변수를 찾을때까지 반복하고 만약 변수를 찾지 못한다면 Reference에러가 발생한다.     
 (외부 렉시컬 환경에서 변수값을 찾는것은 클로져와 관련된 개념 차후에 글 작성 예정)   
 &nbsp;      
 
