--- a/_posts/JS/2023-06-26-let과 const.md
+++ b/_posts/JS/2023-06-26-let과 const.md
@@ -37,7 +37,7 @@ last_modified_at: 2023-06-26
 # 원시타입의 선언과 할당
 일단 원시타입의 변수 데이터를 예시로 들어 설명하자면    
 call Stack에 원시타입 변수가 선언되고    
-데이터 값은 call stack 에 저장되고 데이터 값이 저장도니 call stack의 주소 값은 변수에 저장된다     
+데이터 값은 call stack 에 저장되고 데이터 값이 저장된 call stack의 주소 값은 변수에 저장된다     
 
 
 &nbsp;
@@ -64,23 +64,27 @@ a = 20;
 b = 30; 
 ```
 
-이렇게 변수 b에 30을 재할당하게 된다면 변수 b가 가르키는 메모리 주소값에 저장된 숫자를 바꾸는 것이 아닌  
+이렇게 변수 b에 30을 재할당하게 된다면 변수 b가 가리키는 메모리 주소값에 저장된 숫자를 바꾸는 것이 아닌  
 새로운 메모리를 할당해 30을 추가하고 해당 주소값으로 교체한다   
 그 이후에 가비지컬렉터가 더이상 참조되지 않는 데이터를 메모리에서 해제시킨다 
 
-
+&nbsp;    
 
 
 # 참조 타입의 변수 선언과 할당 
-원시타입의 선언과 할당에도 마찬가지로 Call Stack이 사용된다   
+원시타입의 선언과 할당에도 마찬가지로 Call Stack이 사용된다       
 하지만 Call Stack의 값에는 메모리 주소가 들어가게되고    
 그 주소는 memory heap에서 찾을 수 있다. memory heap의 주소 안에는 값이 들어가게 된다   
 
-가볍게 설명하자면 원시타입은 메모리 주소를 찾으면 값이 원시타입이 나오고    
-참조타입은 메모리 주소를 찾으면 값이 메모리 주소가 나와서 한번 더 그 메모리 주소를 찾아서 값을 찾아야 한다.    
+&nbsp;    
+
+가볍게 설명하자면 원시타입은 메모리 주소를 찾으면 값이 원시타입이 나오고       
+참조타입은 메모리 주소를 찾으면 값이 메모리 주소가 나와서 한번 더 그 메모리 주소를 찾아서 값을 찾아야 한다.      
 
 
 # 그래서 대체 let이랑 const는 언제쓰는데?
+
+&nbsp;   
 
 값 변경이 아닌 call stack의 메모리 주소가 변경될 때 써라.   
 
