--- a/_posts/JS/2023-06-26-렉시컬 환경.md
+++ b/_posts/JS/2023-06-26-렉시컬 환경.md
@@ -61,14 +61,15 @@ name1, name2, test:function
 &nbsp;    
 그리고 함수 test의 환경 레코드 안에는 msg 가 들어있고 외부 렉시컬 환경으로는 전체 스크립트를 가리키고 있다.  
 실행중인 함수는 가장 먼저 자신의 환경 레코드를 찾고 그곳에서 찾지 못하면 외부 렉시컬을 찾는다 ,   
-또 다시 외부렉시컬의 환경 렉시컬에 값이 없다면 외부렉시컬의 외부렉시컬로....      
-&nbsp;
-이렇게 해당 변수를 찾을때까지 반복하고 만약 변수를 찾지 못한다면 Reference에러가 발생한다.     
+또 다시 외부렉시컬의 환경 렉시컬에 값이 없다면 외부렉시컬의 외부렉시컬로....         
+&nbsp;   
+이렇게 해당 변수를 찾을때까지 반복하고 만약 변수를 찾지 못한다면 Reference에러가 발생한다.       
 (외부 렉시컬 환경에서 변수값을 찾는것은 클로져와 관련된 개념 차후에 글 작성 예정)   
 &nbsp;      
 
 이 코드는 가장 먼저 전역 렉시컬 환경이 만들어지고 test함수가 실행되면서 test함수의 렉시컬 환경이 만들어진다.   
-이후 console.log가 실행되면서 자바스크립트 엔진은 test의 환경 레코드를 확인하고 이후에 외부 렉시컬을 확인한다.  
+이후 console.log가 실행되면서 자바스크립트 엔진은     
+test의 환경 레코드를 확인하고 이후에 외부 렉시컬을 확인한다.     
 &nbsp;      
 
 만약 let name1 위에 console.log(name1, name2) 를 선언한다면 어떻게 될까 ?  
