--- a/_posts/JS/2023-06-26-자바스크립트-특징-.md
+++ b/_posts/JS/2023-06-26-자바스크립트-특징-.md
@@ -9,8 +9,8 @@ defaults:
       comments: true
       related: true
 
-title: "자바스크립트의 특징(1)"
-excerpt: "자바스크립트에 특징(1)"
+title: "자바스크립트의 특징(1)(작성중)"
+excerpt: "자바스크립트에 특징(1)(작성중)"
 toc: true
 toc_sticky: true
 toc_label: "목차"
