--- a/_posts/JS/2023-06-28-모던 자바스크립트 (1) 시작, 연산자.md
+++ b/_posts/JS/2023-06-28-모던 자바스크립트 (1) 시작, 연산자.md
@@ -18,8 +18,8 @@ categories:
   - JS 
 tags:
   - [JS, 모던자바스크립트]
-date: 2023-06-20
-last_modified_at: 2023-06-20헤
+date: 2023-06-28
+last_modified_at: 2023-06-28
 ---
 # 모던 자바스크립트
 자바스크립트에 대한 이해도를 높이기 위해 선택한 첫 번째 공부는 [모던자바스크립트](https://ko.javascript.info/) 페이지에서 하기로 정했다   
