--- a/_posts/JS/2023-06-28-모던 자바스크립트 (1) 시작, 연산자.md
+++ b/_posts/JS/2023-06-28-모던 자바스크립트 (1) 시작, 연산자.md
@@ -44,39 +44,62 @@ last_modified_at: 2023-06-28
 # null
 - 자바스크립트에선 존재하지않는 값, 비어있는 값, 알수없는 값을 나타냄
 - 타 언어에서는 존재하지않는 객체에 대한 참조나 null pointer를 나타냄
-- 비교연산자에서 0으로 변환된다. 
+- 비교연산자에서 0으로 변환된다.   
+
+&nbsp;  
 
 # undefined 
 - 값이 할당되지 않은 상태 
 - 내가 직접 없는 값을 표현할때는 null을 쓰는게 좋다. null조차 들어가기전엔 undefined가 뜰 수 있게.
-- 비교연산자에서 숫자와 비교하면 NaN으로 변환된다. 
+- 비교연산자에서 숫자와 비교하면 NaN으로 변환된다.    
 
-위의 둘은 기타비교연산자를 사용할 때 피연산자가 된다면 명확한 의도가 있지 않은이상    
-의도와는 다르게 돌아갈 수 있기 때문에 주의해서 사용하여야 한다.       
+&nbsp;  
+
+
+위의 둘은 기타비교연산자를 사용할 때 피연산자가 된다면 명확한 의도가 있지 않은이상      
+의도와는 다르게 돌아갈 수 있기 때문에 주의해서 사용하여야 한다.         
 만약 변수가 undefined , null 이 될 가능성이 있다면 처리할 로직을 추가해야한다.   
+
+&nbsp;  
+
 
 # 피연산자 = 인수 = argument
 - 5 * 2 는 왼쪽 피연산자5 와 오른쪽 피연산자 2, 총 두개의 피연산자를 가지고있다
 - 피연산자를 하나만 받는 연산자는 단항연산자이다.  위의 예시는 이항연산자 
-- + - 등 연산자들은 수학연산자이다.  
+- 더하기 빼기 등 연산자들은 수학연산자이다.  
 - 동일한 기호의 단항 연산자는 이항연산자보다 우선순위가 높다 [참조](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Operator_precedence)
+
+&nbsp;  
+
 
 # 문자열 비교
 - 두 문자열의 첫 글자를 비교, 유니코드순으로 비교하여 숫자가 더 큰 문자를 찾음 a = 1 b = 2 이런 식으로 
 - 첫 문자가 같으면 두번째 ~ 같다면 세번째 ~ 마지막까지 비교함 
 - 비교가 종료되고 문자열의 길이도 같다면 비교는 종료된다, 만약 길이가 다르면 길이가 더 긴 문자열이 더 큼.
 
-이후로는 아는 개념이지만.. 추가로 정리를 한 번..
+&nbsp;  
 
-# 일치연산자 
+
+이후로는 아는 개념이지만.. 추가로 정리를 한 번..  
+
+&nbsp;  
+
+
+# 일치연산자 ===
 - 데이터의 값과 타입을 모두 비교 , 형 변환 없이 비교한다. 
+
+&nbsp;  
 
 
 # 기타 비교 연산자 <= >= < > 
 - 데이터의 값만 비교 , 피연산자가 타입이 다를경우 숫자형으로 형 변환함. 
 - true는 1 false는 0 으로 변환되어 계산됨
-- 
+
+&nbsp;  
+
 
 # 동등연산자 == 
 - 피연산자가 undefined 나 null 일때 형 변환을 하지않음 , null 이나 undefined 를 다른값과 비교할때는 false를 반환함
 - 동등연산자를 사용할떄는 undefined == null = true 가 나온다. 
+
+&nbsp;  
