--- a/_posts/JS/2023-06-28-모던 자바스크립트 (1) 시작, 연산자.md
+++ b/_posts/JS/2023-06-28-모던 자바스크립트 (1) 시작, 연산자.md
@@ -79,6 +79,27 @@ last_modified_at: 2023-06-28
 
 &nbsp;  
 
+# 논리연산자 
+```js
+// || , && , ! 
+```
+- 이런것들을 지칭하는데 피연산자를 boolean 으로 변환 후 감별함, 모든 타입의 값을 받을 수 있고 결과도 모든 타입이 가능    
+- !! 를 두개 사용하면 boolean(value) 를 쓴것과 같은 효과를 낼 수 있음 
+
+&nbsp;
+
+
+# nullish 병합연산자 '??'
+- 피연산자중 값이 확정되어있는(할당된) 변수를 찾을 수 있음 
+```js
+// a ?? b
+```
+- a 가 null도 아니고 undefined 도 아니면 a , 맞다면 b 
+- 연산자 우선순위가 5로 낮기때문에 표현식 안에서 사용한다면 괄호사용  
+- ?? 는 괄호 없이 ||와 &&를 함께 사용할 수 없다. 
+
+&nbsp;
+
 
 이후로는 아는 개념이지만.. 추가로 정리를 한 번..  
 
