--- a/_posts/JS/2023-07-13-모던 자바스크립트 (15) 재귀와 스택 .md
+++ b/_posts/JS/2023-07-13-모던 자바스크립트 (15) 재귀와 스택 .md
@@ -79,5 +79,16 @@ alert( pow(2, 3) ); // 8
 - 재귀를 사용하면 코드가 짧아짐 , 
 
 
-# 재귀적 순회
-- 
+재귀 - 함수 내부에서 자기 자신을 호출하는 것을 나타내는 용어, 함수가 자신을 호출하는 단계를 재귀단계라고 부름 ,
+
+basis라고도 불리는 재귀의 베이스는 작업을 아주 간단하게 마들어서 함수가 더이상은 서브 호출을 만들지 않게 해주는 인수 
+
+재귀적으로 정의된 자료 구조는 자기 자신을 이용해 자료 구조를 정의함 
+
+연결리스트는 재귀적으로 정의된 자료구조에 속함 , list 혹은 Null 을 참조하는 객체로 이루어진 데이터 구조를 사용해 정의 
+
+모든 재귀함수는 반복문을 사용한 함수로 다시 작성가능
+
+
+
+재귀와 연결리스트에 대해선 알고리즘 혹은 자료구조 부분에 다시 한 번 이야기를 해야겠다... 
