--- a/_posts/Nginx/2023-07-19-젠킨스 적용기 1. 젠킨스에 대해.md
+++ b/_posts/Nginx/2023-07-19-젠킨스 적용기 1. 젠킨스에 대해.md
@@ -32,3 +32,17 @@ categories:
 - 지속적 배포, 지속적인 서비스 제공
 - 지속적 제공이란 변경 사항이 버그 테스트를 거쳐 레포지토리에 자동으로 업로드되는것을 뜻함 
 - 지속적 배포는 변경 사항을 레포지토리에서 고객이 사용가능한 프로덕션 환경까지 자동으로 릴리즈하는것을 의미함 
+
+# 젠킨스 다운로드 및 명령어  
+- 젠킨스는 homebrew 를 통해서 다운로드하였다.
+- http://localhost:8080/ 아래 젠킨스 시작 명령어를 입력 후 localhost 를 통해서 젠킨스 가입을 완료하였다. 
+- 이 때 젠킨스에서 초기 비밀번호가 있는데 사람마다 조금 다르다 /Users/jenkins/secrets/initialAdminPassword 와 같이 파일 위치를 가르쳐주니 터미널을 켜서 파일 확인 후 비밀번호를 복사한다.
+- 플러그인은 추천 플러그인으로 했다
+- brew services start jenkins   // 젠킨스 시작
+- brew services stop jenkins    // 젠킨스 종료
+- brew services restart jenkins //젠킨스 재시작
+
+
+
+
+
