--- a/_posts/Nginx/2023-07-19-nginx 적용기 (3) .md
+++ b/_posts/Nginx/2023-07-19-nginx 적용기 (3) .md
@@ -9,17 +9,31 @@ defaults:
   comments: true
   related: true
 
-title: "nginx 적용기 (3)"
-excerpt: "nginx 적용기 (3)"
+title: "AWS 적용기"
+excerpt: "AWS 적용기"
 toc: true
 toc_sticky: true
 toc_label: "목차"
 categories:
 - Nginx
   tags:
-- [Nginx]
+- [AWS]
   date: 2023-07-24
   last_modified_at: 2023-07-24
 ---
 
-# 
+# AWS 
+- 아마존 웹 서비스 
+
+예전에도 간간히 게임을 할 때 gcp 로 게임서버를 띄우고 그랬었는데 이번엔 aws 로 웹 서버를 띄우려고 한다 
+
+aws 가입 이후 ec2 인스턴스 생성 , 운영체제는 우분투로 진행하였다 
+
+탄력적IP 를 적용하는것을 잊을수도 있으니 꼭 확인하기 
+
+인스턴스 설정이 완료되었으면 
+
+터미널로 들어가서  chmod 400 키페어 .pem  으로 권한 설정을 하고 
+
+터미널에 ssh -i ~~.pem ubuntu@퍼블릭ipv4 을 통해서 접속을 한다. 
+
