--- a/_posts/Network/2023-07-24- docker (3) 웹서버.md
+++ b/_posts/Network/2023-07-24- docker (3) 웹서버.md
@@ -9,8 +9,8 @@ defaults:
       comments: true
       related: true
 
-title: "docker (3) 웹서버"
-excerpt: "docker (3) 웹서버"
+title: "docker (3) 웹서버 alpine"
+excerpt: "docker (3) 웹서버 alpine"
 toc: true
 toc_sticky: true
 toc_label: "목차"
